Icon: render double-sized icons for 1<scale<2 to improve quality

For scale factors that are more than 1 but less than 2, which are quite
common, if the icon is rendered double to what was needed (i.e. 250% on
a scale factor of 125%) then when the resulting QImage is scaled down,
the final quality of the rendered icon is noticeably better.

BUG: 474376